tests/examples/good/good1.mc
int x;
int y;
int z;

int suma(int a, int b) {
    return a + b;
}

int main() {
    x = 5;
    y = 10;
    z = suma(x, y);
    return z;
}
