tests/examples/bad/bad1.mc
int x;

int main() {
    x = 10    // ERROR: falta punto y coma
    return x;
}
